--- a/microservicecloud_config_client.yml
+++ b/microservicecloud_config_client.yml
@@ -1,26 +1,27 @@
 spring:
-    profiles:
-        active:
-        - dev
+  profiles:
+    active: dev
 ---
-server:
-    port: 8201
+server: 
+  port: 8201
 spring:
-    profiles: dev
-    application:
-        name: microservicecloud_config_client
+  profiles: dev #开发环境
+  application:
+    name: springcloud-study-config-client
+
 eureka:
-    client:
-        service-url:
-            defaultZone: http://eureka-dev.com:7001/eureka/
+  client:
+    service-url:
+      defaultZone: eureka7001.com:7001/eureka
 ---
-server:
-    port: 8202
+server: 
+  port: 8202
 spring:
-    profiles: test
-    application:
-        name: microservicecloud_config_client
+  profiles: test #开发环境
+  application:
+    name: springcloud-study-config-client
+
 eureka:
-    client:
-        service-url:
-            defaultZone: http://eureka-test.com:7001/eureka/
+  client:
+    service-url:
+      defaultZone: eureka7001.com:7001/eureka
