--- a/microservicecloud_config_client.yml
+++ b/microservicecloud_config_client.yml
@@ -12,7 +12,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: eureka7001.com:7001/eureka
+      defaultZone: http://eureka-dev.com:7001/eureka/
 ---
 server: 
   port: 8202
@@ -24,4 +24,4 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: eureka7001.com:7001/eureka
+      defaultZone: http://eureka-dev.com:7001/eureka/
